# Rust_Organisation_App

./: .cert.pem  .dockerignore  .env.default  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yaml  tailwind.config.js
.sqlx/: query-0046d89cbdf837fc50c4ad1f5dd48efa5f1041e120f3c3c1533fe7bb5205b47f.json  query-01187f210f655e86ae0e1e25c4d42137495d2a2d218d263b962e4b15ff79f0ba.json  query-027e9f3e6d9c2f9bac0bee065c16bed8f2a91094eacb6c9211392ea4f487132b.json  query-0365018503d71aefbca88406adafd5b0e7e1c1b6c69df27e9846f58e64bedd8c.json  query-03ea683cd0297ec20e5231f52a26e46ba8f5c8c9c3549402fa1b157f6ecfb60d.json  query-04027a380e8b3bb73d5c114653d1e78185f0d8e37dad211a50d98c7f387b0d0c.json  query-076f0afbe0b4e6687d3477ebb5aeac474ca2c74f06a7a00629961c723e4f5b7e.json  query-07a11b9ba9b6794783cf07954ac227ac82b4fd2149c6faf86f276717061df68b.json  query-0b9191101c8bf892c86390a222cb88caac15bc088ba5045f8416d55e0c45118b.json  query-0c5378aca3a4e7b47a695088d9159a9a22a11fe46e6b36cf0ec018d8cfde5d5e.json  query-0d363fcaf0394adbbc7f2758c0603ae7e6c9b69daff46df13d63291733e91919.json  query-0d8f3764a9e8cfad2bdaf69f1e2357be99c40e5455f22e578b6a93f72248b64e.json  query-0db7a4d9a00ee598b2994699cf8d28e4d5306cdbed637f584ac861178c099064.json  query-0e33e8933999ec78fa0b2ac471fd7877b80e37c86b659cfc64e5847afc876d5d.json  query-102641502da8a566266d4176269dffe1f056b742767124ee86a6ee96ded29179.json  query-10f1bcdb594813dd748669858dc72357acc46b00d438f3384e581abec78a58a6.json  query-12d1fb95eec2437ac246fbedcaf5071ef3dd786da871613bd3ffecea4a7ff6a7.json  query-14ab3308c5f08f62ba7cfacf16a75543fef546bf8c0daf1718ae6d94f84282a9.json  query-1585cbd977350f849b788b51833973bb2841ec40d998dfced4874e0ce24c3998.json  query-17dea3e1f2e8dd1c73e32f2eafda9543bd9a9192eeb5015a662d733fd7738ee9.json  query-195f687937baff62ae7c688902329c1affbbcba9303d6befe85c418a7c85671d.json  query-19772f93715e3bae430165de6d91c9290b75b7660e9d1970b9398865d929b7b0.json  (+178 more)
(+212 files in other folders)
