[package]
name = "organization-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = "0.4.31"
dotenv = "0.15.0"
redis = "0.23.3"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = "1.6.1"
