[package]
name = "organization-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "organization"

[dependencies]
askama = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
redis = "0.23.3"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde"] }
