[package]
name = "organization-app"
version = "0.1.0"
edition = "2021"
authors = ["Michal Šoltis", "Matej Vavrek", "Petr Kadlec", "Slavomír Vlček"]

[lib]
name = "organization"

[dependencies]
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
actix-web-middleware-keycloak-auth = "0.4.2"
anyhow = "1.0.75"
askama = "0.12.1"
async-trait = { version = "0.1.74" }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
envy = "0.4.2"
regex = "1.10.2"
reqwest = "0.11.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde"] }

[dev-dependencies]
cargo-sort = "1.0.9"
